Version 0.03
	* Change the match string from "Password: " to "assword:", as some ssh
	  usage uses a different prompt ("foo@bar's password:" instead of a
	  clean "Password:").

Version 0.02
	* Add the "-e" option.